# emotional-llm

./: .env  README.md  a.txt  main.ipynb  pyproject.toml
notebooks/: index.ipynb  main.ipynb
notebooks/files/: docs.json  emotional_history.json  non_emotional_history.json  results.json
notebooks/results/: evaluation_results.json  results_with_memory.json  vec_results.json
