[project]
name = "emotional-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.17.2",
    "ipykernel>=6.29.5",
    "ollama>=0.4.7",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.3",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
]
